<resources>
    <string name="app_name">hi</string>
    <string name="jan_1">Jan 1</string>
    <string name="sticker">Sticker</string>
    <string name="rishab_sethia_jain">Rishab Sethia Jain</string>
    <string name="explorer">explorer</string>
    <string name="explorea">Explore</string>
    <string name="news_jokes_memes_cricket_sco">News, Jokes Memes, Cricket Sco..</string>
    <string name="_34_mins">34 mins</string>
    <string name="jan_31">Jan 31</string>
    <string name="pranshu">Pranshu</string>
    <string name="sent_you_a_sticker">Sent you a sticker</string>
    <string name="jan_26">Jan 26</string>
    <string name="anoop_wit">Anoop Wit</string>
    <string name="anoop_wit_added_you_a_friend">Anoop Wit added you a friend.</string>
    <string name="sahil_wit">Sahil Wit</string>
    <string name="wit_kartik_jain">Wit Kartik Jain</string>
    <string name="hike_down_buttons">hike down buttons</string>
    <string name="pranshu_wit">pranshu_wit</string>
</resources>
