<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:textColorPrimary="#000000"
    tools:context="graycap.hi.MainActivity">

    <!-- Explore -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/explore_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/explorer"
            android:src="@drawable/explore" />

        <LinearLayout
            android:id="@+id/explore_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/explore_img_view"
            android:layout_toEndOf="@id/explore_img_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/explorea"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/news_jokes_memes_cricket_sco" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/explore_txt_view"
            android:layout_toEndOf="@id/explore_txt_view"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/_34_mins" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:background="@color/gray" />

    <!-- RACHET-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rachet_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/pranshu_wit"
            android:src="@drawable/anoop" />

        <LinearLayout
            android:id="@+id/rachet_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/rachet_img_view"
            android:layout_toRightOf="@id/rachet_img_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Wit Rachet"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="you added Wit Rachet as a friend. " />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/rachet_txt_view"
            android:layout_toRightOf="@+id/rachet_txt_view"
            android:text="@string/jan_1" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:background="@color/gray" />



    <!-- PRANSHU-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pranshu_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/pranshu_wit"
            android:src="@drawable/anoop" />

        <LinearLayout
            android:id="@+id/pranshu_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pranshu_img_view"
            android:layout_toRightOf="@id/pranshu_img_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pranshu"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sent_you_a_sticker" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="20dp"
            android:text="@string/jan_1" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:background="@color/gray" />

    <!-- ANNOP  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/anoop_wit"
            android:id="@+id/anoop_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/anoop" />

        <LinearLayout
            android:id="@+id/anoop_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/anoop_img_view"
            android:layout_toEndOf="@id/anoop_img_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/anoop_wit"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/anoop_wit_added_you_a_friend" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="20dp"
            android:text="@string/jan_1" />
    </RelativeLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:background="@color/gray" />

    <!-- SAHIL -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/sahil_wit"
            android:id="@+id/sahil_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sahil" />

        <LinearLayout
            android:id="@+id/sahil_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sahil_img_view"
            android:layout_toEndOf="@id/sahil_img_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sahil_wit"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sticker" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:text="@string/jan_1" />
    </RelativeLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:background="@color/gray" />

    <!-- KARTIK -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/wit_kartik_jain"
            android:id="@+id/kartik_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/kartik" />

        <LinearLayout
            android:id="@+id/kartik_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/kartik_img_view"
            android:layout_toEndOf="@id/kartik_img_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/wit_kartik_jain"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sticker" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:text="@string/jan_1" />
    </RelativeLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:background="@color/gray" />

    <!-- RISHAB -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/rishab_sethia_jain"
            android:id="@+id/rishab_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/rishab" />

        <LinearLayout
            android:id="@+id/rishab_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/rishab_img_view"
            android:layout_toEndOf="@id/rishab_img_view"
            android:orientation="vertical">

            <TextView
                android:id="@+id/r_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rishab_sethia_jain"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sticker" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:text="@string/jan_1" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/hike_down_buttons"
        android:src="@drawable/back" />

</LinearLayout>
